@@ -17,7 +17,6 @@ import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
 
-
 import java.util.*;
 
 /*
@@ -147,7 +146,7 @@ public class Ranger_Hide extends StdAbility
 			return false;
 		}
 
-		if((((mob.location().domainType()&Room.INDOORS)>0))&&(!auto))
+		if((!CMLib.flags().isInWilderness(mob))&&(!auto))
 		{
 			mob.tell(L("You only know how to hide outdoors."));
 			return false;
